--- a/GaeFirebase/pom.xml
+++ b/GaeFirebase/pom.xml
@@ -44,6 +44,11 @@
           <artifactId>firebase-client-jvm</artifactId>
           <version>[1.0.8,)</version>
         </dependency>
+        <dependency>
+          <groupId>com.firebase</groupId>
+          <artifactId>firebase-token-generator</artifactId>
+          <version>2.0.0</version>
+        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
