Fixed bug in sending message to main server

--- a/GaeFirebase/pom.xml
+++ b/GaeFirebase/pom.xml
@@ -49,7 +49,12 @@
           <artifactId>firebase-token-generator</artifactId>
           <version>2.0.0</version>
         </dependency>
-
+        <dependency>
+          <groupId>com.google.api-client</groupId>
+          <artifactId>google-api-client</artifactId>
+          <version>1.19.1</version>
+        </dependency>
+  
         <!-- Test Dependencies -->
         <dependency>
             <groupId>com.google.appengine</groupId>
