--- a/GaeFirebase/pom.xml
+++ b/GaeFirebase/pom.xml
@@ -59,6 +59,11 @@
           <artifactId>google-api-client-appengine</artifactId>
           <version>1.21.0</version>
         </dependency>
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.7.3</version>
+        </dependency>
   
         <!-- Test Dependencies -->
         <dependency>
