--- a/GaeFirebase/pom.xml
+++ b/GaeFirebase/pom.xml
@@ -64,8 +64,19 @@
           <artifactId>jackson-core</artifactId>
           <version>2.7.3</version>
         </dependency>
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.4</version>
+        </dependency>
   
         <!-- Test Dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-testing</artifactId>
